# low_precision_quantization

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  format.sh  requirements.txt  run_tests.sh  setup.py
bindings/: PythonLPQ.cc
python_scripts/: exact_search.py  glove_100.py  lpq_exact_search.py  run_faiss.py  utils.py
src/: CMakeLists.txt  DistanceMetrics.h  ExactSearch.cc  ExactSearch.h  LPQ.cc  LPQ.h  Main.cc  NaiveQuantizer.cc  NaiveQuantizer.h
src/tests/: CMakeLists.txt  TestQuantizer.cc  test.cc
